--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
 		<script src="/assets/js/burgers.js"></script>
 	</head>
 	<body>
+		<div class="jumbotron">I don't fully get it, Jumbotron not even working "Handlebar" Boo!</div>
 		{{{ body }}}
 	</body>
 </html>
