--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,12 +17,14 @@
 
 <ul>
   {{#each burger}}
-    {{#if devoured}}
+    {{this.burger_name}}
+
+    {{#unless devoured}}
     <li>
     eaten: {{burger/burger}}
       {{!-- {{> burgers/burger=false}} --}}
       </li>
-    {{/if}}
+    {{/unless}}
 
     <button data-id="{{this.id}}" class="delquote">Delete</button>
 
